--- a/package.json
+++ b/package.json
@@ -26,12 +26,11 @@
     "eslint-plugin-import": "^2.27.5",
     "stylelint": "^15.7.0",
     "stylelint-config-standard": "^33.0.0",
-    "stylelint-config-standard-scss": "^9.0.0"
-        "nodemon": "^2.0.22"
+    "stylelint-config-standard-scss": "^9.0.0",
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
-        "express": "^4.18.2"
-
+    "lodash": "^4.17.21",
+    "express": "^4.18.2"
   }
 }
