--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -12,4 +12,10 @@ overrides:
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules: {}
+rules:
+  import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
+    - error
+    - ignorePackages
+    - js: always
+  no-underscore-dangle: [2, { 'allow': ['__filename', '__dirname'] }]
+  
