--- a/package.json
+++ b/package.json
@@ -19,18 +19,15 @@
   },
   "homepage": "https://github.com/KostyaGro/ByteBrigadeProject#readme",
   "devDependencies": {
-    "@html-eslint/eslint-plugin": "^0.19.0",
-    "@html-eslint/parser": "^0.19.0",
+
     "eslint": "^8.42.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "stylelint": "^15.7.0",
-    "stylelint-config-standard": "^33.0.0",
-    "stylelint-config-standard-scss": "^9.0.0",
+
     "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "lodash": "^4.17.21"
   }
 }
