--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "eslint": "^8.42.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
-
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "prettier": "2.8.8"
   },
   "dependencies": {
     "express": "^4.18.2",
